@@ -1,6 +1,6 @@
 /*
 
-Copyright (c) 2010, Arvid Norberg
+Copyright (c) 2011, Arvid Norberg
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
@@ -30,75 +30,19 @@ POSSIBILITY OF SUCH DAMAGE.
 
 */
 
-#ifndef TORRENT_SLIDING_AVERAGE_HPP_INCLUDED
-#define TORRENT_SLIDING_AVERAGE_HPP_INCLUDED
+#include <boost/python.hpp>
+#include <libtorrent/error_code.hpp>
 
-namespace libtorrent
+using namespace boost::python;
+using namespace libtorrent;
+
+void bind_error_code()
 {
-// a sliding average accumulator. Add samples to it and it
-// keeps track of a sliding mean value and an average deviation
-// from that average.
-template <int history_size>
-struct sliding_average
-{
-	sliding_average(): m_mean(-1), m_average_deviation(-1) {}
-
-	void add_sample(int s)
-	{
-		if (m_mean == -1)
-		{
-			m_mean = s;
-			return;
-		}
-		int deviation = abs(m_mean - s);
-
-		m_mean = m_mean - m_mean / history_size + s / history_size;
-
-		if (m_average_deviation == -1)
-		{
-			m_average_deviation = deviation;
-			return;
-		}
-		m_average_deviation = m_average_deviation - m_average_deviation
-			/ history_size + deviation / history_size;
-	}
-
-	int mean() const { return m_mean != -1 ? m_mean : 0; }
-	int avg_deviation() const { return m_average_deviation != -1 ? m_average_deviation : 0; }
-
-private:
-	int m_mean;
-	int m_average_deviation;
-};
-
-struct average_accumulator
-{
-	average_accumulator()
-		: m_num_samples(0)
-		, m_sample_sum(0)
-	{}
-
-	void add_sample(int s)
-	{
-		++m_num_samples;
-		m_sample_sum += s;
-	}
-
-	int mean()
-	{
-		int ret;
-		if (m_num_samples == 0) ret = 0;
-		else ret = m_sample_sum / m_num_samples;
-		m_num_samples = 0;
-		m_sample_sum = 0;
-		return ret;
-	}
-
-	int m_num_samples;
-	size_type m_sample_sum;
-};
-
+    class_<error_code>("error_code")
+        .def(init<>())
+        .def("message", &error_code::message)
+        .def("value", &error_code::value)
+        .def("clear", &error_code::clear)
+        ;
 }
-
-#endif
 
