@@ -230,8 +230,8 @@ namespace libtorrent
 		set.cache_size = 32768 * 2;
 		set.use_read_cache = true;
 		set.cache_buffer_chunk_size = 128;
-		set.read_cache_line_size = 512;
-		set.write_cache_line_size = 512;
+		set.read_cache_line_size = 32;
+		set.write_cache_line_size = 32;
 		set.low_prio_disk = false;
 		// one hour expiration
 		set.cache_expiry = 60 * 60;
